<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="permissions_required">Notification and location access is required for app to work as expected.</string>
    <string name="notification_permission_granted">Notification access is required to receive reminder notifications.</string>
    <string name="location_permission_required">Location access is required to make reminder location feature easier to use.</string>
    <string name="ok">OK</string>
    <string name="sign_in_unsuccessful">Sign in unsuccessful</string>
    <string name="feature_may_not_work_properly">Feature may not work properly without all permission granted.</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_of_a_person_pointing_at_a_specific_location_on_a_laid_out_crinkled_up_paper_map">Image of a person pointing at a specific location on a laid out, crinkled up, paper map.</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="description">Description:</string>
    <string name="directions">Directions:</string>
    <string name="map_directions_message">To select a location for your reminder tap on any landmark, point of interest or existing marker. You can also long press on any place in the map in order to set down a marker for any location.</string>
    <string name="map_has_loaded">Map has loaded</string>
</resources>
