...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_small"
                android:text="@{item.title}"
                android:textColor="@color/black"
...
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/title"
                tools:text="Description" />

            <TextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{item.location}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"
...
