<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.udacity.project4.locationreminders.savereminder.SaveReminderViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapView"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/location_reminder_save_button"
            android:background="@color/blood_orange"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/location_reminder_button_margin"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:text="@string/save" />

    </FrameLayout>
</layout>
