<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/reminderListFragment">

    <fragment
        android:id="@+id/reminderListFragment"
        android:name="com.udacity.project4.locationreminders.reminderslist.ReminderListFragment"
        android:label="ReminderListFragment">
        <action
...
